test/Fail/Issue4881b.err
Issue4881b.agda:1,1-2,14: error: [Syntax.DuplicateAnonDeclaration]
Duplicate declaration of _
